objects/Issue_Comment__c.object
<CustomObject>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issue Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <referenceTo>Issue__c</referenceTo>
        <relationshipLabel>Issue Comments</relationshipLabel>
        <relationshipName>Issue_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ready_for_Retest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Retest</label>
        <type>Checkbox</type>
    </fields>
    <label>Issue Comment</label>
    <nameField>
        <displayFormat>IC-{000000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>